# sdl3-playproject

./: .clang-format  .clang-tidy  .gitignore  .tool-versions  AGENTS.md  CMakeLists.txt  CMakePresets.json  CPPLINT.cfg  RALPH.md  README.md  app.just  build.just  check.just  format.just  justfile  lint.just  ralph.sh  test.just  vars.just
.claude/commands/execute/: atomic.md  check.md
.claude/commands/plan/: next.md  update.md
.claude/commands/research/: engine.md
.codex/skills/execute-atomic/: SKILL.md
.codex/skills/execute-check/: SKILL.md
.codex/skills/plan-next/: SKILL.md
.codex/skills/plan-update/: SKILL.md
.codex/skills/research-engine/: SKILL.md
.github/workflows/: ci.yml
.tools/: README.md  fetch_spriters_resource_sheets.py  gen_placeholder_sprites.py
assets/characters/: bolt.toml  forge.toml  gale.toml  nimbus.toml  vex.toml
assets/characters/_includes/: actions_dash_megaman_press.toml  actions_dash_ninja.toml  actions_dash_wario.toml  actions_fly_kirby.toml  actions_glide_knuckles.toml  actions_spindash_sonic.toml  actions_wall_knuckles.toml  form_anchor_head_minus2_arms_minus1.toml  form_anchor_kirby.toml  form_anchor_knuckles.toml  form_anchor_ninja.toml  form_anchor_sonic.toml  form_anchor_wario.toml  form_colors_glove_shoe_brown.toml  form_colors_glove_shoe_charcoal.toml  form_colors_sonic.toml  jump_kirby_impulse_3_5.toml  jump_knuckles_impulse_4.toml  jump_mario_dual_gravity.toml  jump_megaman_impulse_2_33.toml  jump_ninja_impulse_3_83.toml  jump_sonic_clamp_vy.toml  jump_sonic_impulse_4.toml  jump_wario_dual_gravity.toml  math_pixel_trunc_16.toml  math_pixel_trunc_256.toml  move_kirby.toml  move_knuckles.toml  move_mario.toml  move_megaman_instant.toml  move_ninja.toml  move_sonic.toml  move_wario.toml  physics_kirby.toml  physics_knuckles.toml  physics_mario.toml  physics_megaman_instant.toml  physics_ninja.toml  physics_sonic.toml  physics_wario.toml  (+11 more)
assets/collectibles/: coin.toml  gem_blue.toml  gem_green.toml  gem_red.toml
assets/dev/characters/: kirby.toml  knuckles.toml  luigi.toml  mario.toml  megaman_nes.toml  megamanx.toml  ninja_airdash.toml  puppet.toml  simon.toml  sonic.toml  tails.toml  test_air_drag.toml  test_air_turn_resistance.toml  test_dash_hold.toml  test_drop_through_hold.toml  test_env_overrides.toml  test_fixed_jump.toml  test_instant.toml  test_instant_no_air_control.toml  test_jump_hold_cap.toml  test_jump_table.toml  test_release_drop.toml  test_release_drop_off.toml  test_rise_gravity.toml  test_rise_gravity_off.toml  test_roll_speed.toml  test_slide_window.toml  test_spin.toml  test_spindash_window.toml  test_subpixel256.toml  test_turn_resist.toml  test_wall.toml  wario_charge.toml  zero_airdash.toml
assets/dev/stages/: camera_lock_torture.toml  camera_look_torture.toml  enemy_torture.toml  gauntlet_big.toml  hazards_ignore_iframes_torture.toml  hazards_lockout_torture.toml  hazards_torture.toml  marathon_huge.toml  mechanics_torture.toml  micro_knobs_ref.toml  no_backscroll_torture.toml  playground_big.toml  playground_huge.toml  slide_ceiling_torture.toml  slope_torture.toml  test_stage.toml  tower_big.toml  wall_torture.toml  zones_torture.toml
assets/enemies/: bat_basic.toml  hopper_basic.toml  shooter_basic.toml  skeleton_basic.toml  slime_basic.toml  spiky_basic.toml  walker_basic.toml
assets/forms/: puppet.toml
assets/input_scripts/: README.md  camera_look_down.toml  camera_look_up.toml  enemy_torture_attack.toml  jump_table_run_jump.toml  mechanics_torture_air_dash_jump_again.toml  mechanics_torture_air_turn_resistance.toml  mechanics_torture_coyote_jump.toml  mechanics_torture_dash_hold_long.toml  mechanics_torture_dash_hold_short.toml  mechanics_torture_dash_right.toml  mechanics_torture_drop_through.toml  mechanics_torture_fly_jump_again.toml  mechanics_torture_fly_rise.toml  mechanics_torture_full_hop.toml  mechanics_torture_glide_fall.toml  mechanics_torture_glide_jump_again.toml  mechanics_torture_jump_buffer.toml  mechanics_torture_jump_buffer_early.toml  mechanics_torture_no_air_control_reverse.toml  mechanics_torture_short_hop.toml  mechanics_torture_slide_window.toml  mechanics_torture_spin_stop.toml  mechanics_torture_spindash_charge_release.toml  mechanics_torture_spindash_window.toml  mechanics_torture_spindash_window_down_early.toml  mechanics_torture_spindash_window_late.toml  mechanics_torture_spindash_window_same_frame.toml  micro_knobs_air_drag_jump_release.toml  micro_knobs_idle.toml  micro_knobs_roll_speed.toml  micro_knobs_roll_tunnel.toml  micro_knobs_turn_resist_reverse.toml  move_instant_run_right.toml  no_backscroll_torture_right_then_left.toml  slide_ceiling_torture_slide_under.toml  slope_torture_one_way_seam_traverse.toml  slope_torture_one_way_seam_traverse_left.toml  slope_torture_peak_traverse.toml  slope_torture_seam_tie_traverse.toml  (+12 more)
assets/shmup/bosses/: mothership.toml
assets/shmup/enemies/: fighter.toml  scout.toml
assets/sprites/: README.md
assets/stages/: skyway_run.toml
cmake/: CPM.cmake  DevTools.cmake  ThirdParty.cmake  iwyu.mapping  run_clang_tidy.cmake
notes/: classic_platformer_internal_mechanics.md  plan.md  puppet_art_brief.md  puppet_art_feedback.md  puppet_art_outreach.md
scripts/: combine_sprites.py
src/: main.cpp
src/character/: Actions.cpp  Actions.h  CharacterConfig.cpp  CharacterConfig.h  CharacterController.cpp  CharacterController.h
src/collectible/: CollectibleConfig.cpp  CollectibleConfig.h
src/core/: App.cpp  App.h  DebugUI.cpp  DebugUI.h  Input.cpp  Input.h  InputScript.cpp  InputScript.h  Prefs.cpp  Prefs.h  SpriteCache.cpp  SpriteCache.h  Time.h
src/ecs/: Components.h  Entity.h  Systems.cpp  Systems.h  World.cpp  World.h
src/enemy/: EnemyConfig.cpp  EnemyConfig.h
src/shmup/: ShmupGame.cpp  ShmupGame.h
src/stage/: Stage.cpp  Stage.h
src/util/: Math.h  Paths.h  TomlUtil.h
src/visual/: CharacterForms.cpp  CharacterForms.h  Form.cpp  Form.h  FormToml.cpp  FormToml.h  Palette.h  Rules.h  Shapes.cpp  Shapes.h
tools/: dev.py  migrate_toml_v2_120hz.py  migrate_toml_v2_complete.py  new_asset.py
(+48 files in other folders)
